--- a/README
+++ b/README
@@ -6,12 +6,11 @@ This approach aims to minimize the direct use of pointers by replacing direct me
 
 To facilitate debugging, mls.h includes a suite of macros. A brief demonstration of the error-handling mechanisms is provided in examples/03---error-handling.
 
-One of the key advantages of this approach is the use of integer handles as references to arbitrary arrays. This abstraction allows any data structure to be represented as an array of integers, providing a highly flexible and convenient framework for handling even the most complex data structures.
+One of the key advantages of this approach is the use of integer handles as references to arbitrary arrays. This abstraction allows any data structure to be represented as an array of integers, providing a  flexible framework for handling even complex data structures. 
 
 The m_put(M, ptr) function is one of the most powerful tools in this implementation. It can be used for any array type, automatically resizing as needed while preserving the handle, enabling seamless data appending. When data structures are treated as arrays of integers, m_put becomes an essential function in the workflow.
 
-Since the handle remains constant until the array is explicitly freed, it can be safely used throughout the program without needing re-assignment. This consistency also allows functions to accept arrays as arguments more flexibly. For example, the traditional fread function, defined as fread(void *ptr, size_t size, size_t nmemb, FILE *stream), could instead be adapted to use a handle, as in xxfread(int my_array, FILE *stream). or 'int xxfread(FILE *stream)'.
-
+Since the handle remains constant until the array is explicitly freed, it can be safely used throughout the program without needing re-assignment. This consistency also allows functions to accept arrays as arguments more flexibly. For example, the well known 'ssize_t getline(char **lineptr, size_t *n, FILE *stream)' function, could instead be adapted to use a handle, as in 'int getline(int my_array, FILE *stream)'. 
  
 An additional advantage is that handles are always positive integers. This allows functions to return the handle itself when successful or, if needed, a negative value to indicate an error code, enabling quick and easy error handling.
 
