--- a/todo.txt
+++ b/todo.txt
@@ -7,6 +7,7 @@ Implement use-after-free protection
   Solution:
      reduce handles to 24bit and fill the remaining seven bits with a bit pattern
      that changes on every call of m_free.
-     
-       
-  
+     store that pattern inside the lst_t struct
+     on access use 24bit to find the lst_t struct, compare the 7bit-pattern with
+     the pattern stored inside the lst_t structure, exit if not match.
+
